# marinade-value-parser

./: Cargo.toml
idls/: marinade-idl.json
src/: lib.rs
src/accounts/: instructions.rs  marinade.rs  mod.rs
