[package]
name = "parser_test"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-transaction-status = "1.14"
solana-client = "1.14"
solana-sdk = "1.14"
anchor-lang = "0.27.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bs58 = "0.4.0"
blake3 = "1.3.1"
solana-account-decoder = "1.16.0"
base64 = "0.13.0"
log = "0.4"
env_logger = "0.10"
sha2 = "0.10.6"
lazy_static = "1.4.0"